synopsis: "The HOARe² Verification Tool"
description: """
HOARe² provides a type checker for a relational refinement
higher-order type system.
"""
opam-version: "2.0"
maintainer: "Emilio J. Gallego Arias <e@x80.org>"
authors: "Emilio J. Gallego Arias, Justin Hsu"
homepage: "https://github.com/ejgallego/HOARe2"
bug-reports: "https://github.com/ejgallego/HOARe2/issues"
dev-repo: "git+https://github.com/ejgallego/HOARE2.git"
license: "MIT"

depends: [
  "dune"                 { >= "2.1.3"    }
  "menhir"               { >= "20181113" }
  "why3"                 {  = "1.2.1"    }
  "alt-ergo"             {  = "2.3.0"    }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
